--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "http": "cd src && http-server",
     "start": "node dist/index.js",
     "build": "tsc"
   },
   "dependencies": {
+    "flowbite": "^2.5.2",
     "jsdom": "^25.0.1"
   },
   "devDependencies": {
+    "flowbite-typography": "^1.0.5",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.5.3"
   },
   "private": true
